# arsdaily

./: .gitignore  LICENSE  README.md  env.sample  pyproject.toml  requirements.txt
src/: digest.py  template.html
